trunk/Archive2/cc/36c1ac68529605/output
main.cpp:3:1: error: static_assert failed "should not fail"
static_assert(std::is_nothrow_move_assignable<std::string>::value, "should not fail");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
